force-app/main/default/objects/FIM_BOS_Email_Settings__mdt/FIM_BOS_Email_Settings__mdt.object-meta.xml
<CustomObject>
    <label>FIM BOS Email Settings</label>
    <pluralLabel>FIM BOS Email Settings</pluralLabel>
</CustomObject>