force-app/main/default/objects/FIM_BOS_Email_Settings__mdt/fields/BOS_Email__c.field-meta.xml
<CustomField>
    <fullName>BOS_Email__c</fullName>
    <label>BOS Email</label>
    <type>Email</type>
</CustomField>