force-app/main/default/objects/FIM_BOS_Email_Settings__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>