force-app/main/default/objects/FIM_BOS_Email_Settings__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMER</fullName>
                <default>true</default>
                <label>AMER</label>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>